Fix #4 improve contrast on questions with a splash of yellow

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -29,7 +29,7 @@ h1 {
 	color: $primary-color;
 }
 
-h4 {
+h4, .question {
 	color: $secondary-color;
 }
 
